k8s/jellyfin-qbittorrent/deployment.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: qbittorrent
  name: qbittorrent
  namespace: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: qbittorrent
      labels:
        app: qbittorrent
    spec:
      containers:
        - image: lscr.io/linuxserver/qbittorrent:5.2.0
          name: qbittorrent
          ports:
            - name: webui
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
            periodSeconds: 10
          volumeMounts:
            - name: qbittorrent-config
              mountPath: /config
            - name: qbittorrent-shared-storage
              mountPath: /downloads
      volumes:
        - name: tun
          hostPath:
            path: /dev/net/tun
        - name: qbittorrent-config
          persistentVolumeClaim:
            claimName: qbittorrent-config
        - name: qbittorrent-shared-storage
          persistentVolumeClaim:
            claimName: jellyfin-media-rwx
      restartPolicy: Always
---
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: jellyfin
spec:
  selector:
    app: qbittorrent
  type: ClusterIP
  ports:
    - name: webui
      port: 8080
      targetPort: 8080
